--- a/src/bookstore/gui/controllers/AddCategory.fxml
+++ b/src/bookstore/gui/controllers/AddCategory.fxml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<<<<<<< HEAD
-
-=======
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
->>>>>>> origin/Khouloud
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.Glow?>
@@ -14,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="721.0" styleClass="mainFxmlClass" stylesheets="@addbooks.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.gui.controllers.AddCategoryController">
+<AnchorPane id="AnchorPane" prefHeight="786.0" prefWidth="1200.0" styleClass="mainFxmlClass" stylesheets="@addbooks.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.gui.controllers.AddCategoryController">
    <children>
       <AnchorPane layoutX="124.0" layoutY="113.0" prefHeight="468.0" prefWidth="494.0" style="-fx-background-color: white;" styleClass="card" stylesheets="@addbooks.css">
          <children>
@@ -29,21 +25,13 @@
             <Font name="Arial Bold" size="24.0" />
          </font>
       </Label>
-      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="25.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="back" fitHeight="44.0" fitWidth="44.0" layoutX="25.0" layoutY="28.0" onMouseClicked="#goHome" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@img/home.PNG" />
+            <Image url="@../xml/img/home.PNG" />
          </image></ImageView>
-<<<<<<< HEAD
-      <Button fx:id="btn_save" layoutX="219.0" layoutY="497.0" mnemonicParsing="false" onAction="#Save" prefHeight="32.0" prefWidth="119.0" styleClass="mainFxmlClass" stylesheets="@addbook.css" text="Save" textFill="WHITE">
-         <effect>
-            <Glow />
-         </effect></Button>
-      <Button fx:id="btn_cancel" cancelButton="true" defaultButton="true" layoutX="355.0" layoutY="497.0" mnemonicParsing="false" onAction="#cancel" prefHeight="32.0" prefWidth="119.0" style="-fx-background-color: grey;" stylesheets="@addbook.css" text="Cancel" textFill="WHITE" />
-=======
       <Button fx:id="btn_save" layoutX="239.0" layoutY="527.0" mnemonicParsing="false" onAction="#Save" prefHeight="32.0" prefWidth="119.0" styleClass="mainFxmlClass" stylesheets="@addbooks.css" text="Save" textFill="WHITE">
      </Button>
       <Button fx:id="btn_cancel" cancelButton="true" defaultButton="true" layoutX="375.0" layoutY="527.0" mnemonicParsing="false" onAction="#cancel" prefHeight="32.0" prefWidth="119.0" style="-fx-background-color: grey;" stylesheets="@addbooks.css" text="Cancel" textFill="WHITE" />
->>>>>>> origin/Khouloud
    </children>
    <effect>
       <Glow />
